# slamkit

./: .gitignore  README.md  pyproject.toml  requirements.txt
cli/: eval.py  extract_features.py  preference_alignment_feature_extractor.py  preference_alignment_train.py  prepare_tokens.py  train.py
config/: eval.yaml  extract_features.yaml  preference_alignment_feature_extractor.yaml  preference_alignment_train.yaml  prepare_tokens.yaml  train.yaml  train_inter_scale.yaml
config/data/: default.yaml  preference_alignment_data.yaml  pretrain_data.yaml  pretrain_multi_ds.yaml
config/logger/: print.yaml  wandb.yaml
config/metric/: asr_perplexity.yaml  cm_generate.yaml  cm_ms_tsc.yaml  default.yaml  generate.yaml  hellaswag.yaml  llm_as_judge.yaml  ms_ssc.yaml  ms_tsc.yaml  salmon.yaml  sblimp.yaml  sstorycloze.yaml  swuggy_inter.yaml  swuggy_oov.yaml  tstorycloze.yaml
config/model/: default.yaml  gslm.yaml  slam.yaml  twist.yaml
config/tokeniser/: default.yaml  interleaved_hubert_25.yaml  unit_hubert_25.yaml  unit_hubert_l9.yaml
config/training_args/: debug.yaml  default.yaml  dpo_training_args.yaml  pretrain_training_args.yaml  scaling_interleaving.yaml
config/vocoder/: default.yaml  no_vocoder.yaml  vocoder_hubert_25.yaml
docs/: SIMS.md  SLAM.md
example_data/: features.jsonl  tokens.jsonl
slamkit/data/: __init__.py  hf_dataset.py
slamkit/feature_extractor/: __init__.py  audio_feature_extractor.py  hubert_feature_extractor.py
slamkit/metric/: __init__.py  cross_modal_generation.py  cross_modal_metric.py  generative_metric.py  metric_utils.py  (+2 more)
(+28 files in other folders)
