[build-system]
source = ["slamkit"]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slamkit"
version = "0.1.0"
dependencies = [
    "torch",
    "torchaudio",
    "torchvision",
    "transformers>=4.48.1",
    "datasets",
    "omegaconf",
    "hydra-core>=1.3.0",
    "accelerate",
    "numpy",
    "trl",
    "scikit-learn"
]

[tool.setuptools.packages.find]
where = ["."]